Corrected smaller bugs in translations and did some smaller improvements esp. to the string for the email notifications

--- a/language/ar/lng.conf
+++ b/language/ar/lng.conf
@@ -24,7 +24,7 @@ lastlogin = اخر نشاط
 locale = اللغة
 login = تسجيل دخول
 loginbutton = دخول
-loginerror = انت لم تكن مسجل دخول.<br>رجاءا تحقق من صلاحياتك.
+loginerror = انت لم تكن مسجل دخول.<br />رجاءا تحقق من صلاحياتك.
 logout = تسجيل خروج
 male = ذكر
 members = الناس
@@ -48,7 +48,7 @@ userwasassigned = تمت تكلفة المستخدم
 userwasdeassigned = تمت إزالة التكليف من عل المستخدم
 userwasdeleted = تم حذف المستخدم
 userwasedited = تم تعديل المستخدم
-vcardexport = تصدير V-card
+vcardexport = تصدير vCard
 welcomeback = مرحبا بك
 zip = الرقم البريدي
 access = وصول
@@ -85,7 +85,7 @@ edittasklist = عدل قائمة المهام
 latetasks = مهمات متاخرة
 mytasks = مهماتي
 newtasks = مهمات جديدية
-notasklists = لا اي قائمة مهام.<br />رجاءا <a href
+notasklists =
 notasks = لا يوجد اية مهام منتظرة
 openprogress = افتح
 status = الحالة
@@ -147,10 +147,10 @@ profileaddedsubject =
 profileaddedtext = 
 profilepass = 
 profileusername = 
-projectassignedsubject = ملحوظة من Collabtive: تم تكلفة المشروع
-projectassignedtext = نص
-taskassignedsubject = ملحوظة من Collabtive: تم تكلفة المهمة
-taskassignedtext = مرحبا,<br />تم تكلفة مهمة جديدة لك :
+projectassignedsubject = ملحوظة من Collabtive – تم تكلفة المشروع
+projectassignedtext =
+taskassignedsubject = ملحوظة من Collabtive – تم تكلفة المهمة
+taskassignedtext = مرحبا,<br /><br />تم تكلفة مهمة جديدة لك :<br />
 addfile = اضف ملف
 addfiles = اضف ملفات
 addfolder = اضف مجلد
@@ -202,7 +202,7 @@ it = إيطالي
 jp = ياباني
 lt = اللتوانية
 nl = هولندي
-no = لا
+nor =
 pl = بولندي
 pt = برتغالي
 pt_br = برتغالي (برازيلي)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = استورد من الـ Basecamp
 importsuccess = تمت عملية الاستيراد بنجاح
 inactive = خامل
+no = لا
 objoff = خامل
 objon = نشيط
 on = انشيء
