--- a/language/bg/lng.conf
+++ b/language/bg/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Редактирай списък със задачи
 latetasks = Задачи със закъснение
 mytasks = Моите задачи
 newtasks = Нови задачи
-notasklists = Няма настоящи списък със задачи
+notasklists =
 notasks = Няма настоящи задачи
 openprogress = Отворена
 status = Статус
@@ -147,10 +147,10 @@ profileaddedsubject =
 profileaddedtext = 
 profilepass = 
 profileusername = 
-projectassignedsubject = Предмет на мейла за предмет
-projectassignedtext = Текст на мейла за предмет
-taskassignedsubject = Предмет на мейла за задача
-taskassignedtext = Текст на мейла за задача
+projectassignedsubject =
+projectassignedtext =
+taskassignedsubject =
+taskassignedtext =
 addfile = Прибави файл
 addfiles = Прибави файлове
 addfolder = Прибави папка
@@ -202,7 +202,7 @@ it = Italian
 jp = Japanese
 lt = Lithuanian
 nl = Dutch
-no = Не
+nor =
 pl = Polish
 pt = Portuguese
 pt_br = Portuguese (Brasil)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Импорт от Basecamp
 importsuccess = Импортът приключи успешно
 inactive = Неактивен
+no = Не
 objoff = Неактивен
 objon = Активен
 on = Създадено
