--- a/language/ca/lng.conf
+++ b/language/ca/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Edita la llista de tasques
 latetasks = Tasques endarrerides
 mytasks = Les meves tasques
 newtasks = Tasques noves
-notasklists = No s'ha trobat cap llista de tasques.<br />Si us plau, <a href
+notasklists =
 notasks = No hi ha tasques pendents
 openprogress = Obert
 status = Estat
@@ -143,14 +143,14 @@ mailmethod = Mètode
 mailserver = Servidor
 mailusername = Nom d'usuari SMTP
 mailpass = Contrasenya SMTP
-profileaddedsubject = Subjecte afegit al perfil
-profileaddedtext = Nou texte afegit al perfil
-profilepass = Contrasenya perfil
-profileusername = Nom d'usuari del perfil
-projectassignedsubject = Notificació de Collabtive - Projecte assignat
-projectassignedtext = Hola,<br />Has estat assignat a aquest nou projecte:
-taskassignedsubject = Notificació de Collabtive - Tasca assignada
-taskassignedtext = Hola,<br />Has estat assignat a una nova tasca:
+profileaddedsubject =
+profileaddedtext =
+profilepass = Contrasenya
+profileusername = Nom d'usuari
+projectassignedsubject = Notificació de Collabtive – Projecte assignat
+projectassignedtext = Hola,<br /><br />Has estat assignat a aquest nou projecte:<br />
+taskassignedsubject = Notificació de Collabtive – Tasca assignada
+taskassignedtext = Hola,<br /><br />Has estat assignat a una nova tasca:<br />
 addfile = Afegeix un fitxer
 addfiles = Afegeix fitxers
 addfolder = Afegeix un directori
@@ -202,7 +202,7 @@ it = Italiano
 jp = Japonès
 lt = Lituà
 nl = Neerlandès
-no = No
+nor =
 pl = Polonès
 pt = Portugués
 pt_br = Portuguès (Brasil)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Importació (Basecamp)
 importsuccess = La importació s'ha completat satisfactòriament
 inactive = Inactiu
+no = No
 objoff = Apagat
 objon = Encès
 on = Creat
