--- a/language/cn/lng.conf
+++ b/language/cn/lng.conf
@@ -48,7 +48,7 @@ userwasassigned = 成功分配用户
 userwasdeassigned = 成功解除用户任务
 userwasdeleted = 成功删除用户
 userwasedited = 成功编辑用户
-vcardexport = 导出V-card
+vcardexport = 导出vCard
 welcomeback = 欢迎回来
 zip = 邮政编码
 access = 访问
@@ -85,7 +85,7 @@ edittasklist = 编辑任务列表
 latetasks = 最新项目
 mytasks = 我的任务
 newtasks = 新任务
-notasklists = 还没有任务列表.<br />请 <a href
+notasklists =
 notasks = 没有未决任务
 openprogress = 打开
 status = 状态
@@ -143,14 +143,14 @@ mailmethod = 发送方法
 mailserver = 邮件服务器
 mailusername = SMTP用户名
 mailpass = SMTP密码
-profileaddedsubject = Collabtive - 你的新用户档案
-profileaddedtext = 已成功添加新的用户档案
+profileaddedsubject = Collabtive提示 – 你的新用户档案
+profileaddedtext = 你好,<br /><br />已成功添加新的用户档案<br />
 profilepass = 密码
 profileusername = 用户名
-projectassignedsubject = Collabtive提示 - 已成功布置项目
-projectassignedtext = 文字
-taskassignedsubject = Collabtive提示 - 已成功布置任务
-taskassignedtext = 你好,<br />系统给你分配了一个新的任务:
+projectassignedsubject = Collabtive提示 – 已成功布置项目
+projectassignedtext =
+taskassignedsubject = Collabtive提示 – 已成功布置任务
+taskassignedtext = 你好,<br /><br />系统给你分配了一个新的任务:<br />
 addfile = 添加文件
 addfiles = 批量添加
 addfolder = 添加文件夹
@@ -185,34 +185,34 @@ search = 搜索
 searchfor = 搜索
 searching = 搜索中...
 searchitem = 搜索的项目
-ar = Arabian
-bg = Bulgarian
-ca = Catalan
+ar =
+bg =
+ca =
 cn = 简体中文
-cz = Czech
-da = Danish
-de = German
-en = English
-es = Spanish
-es_gl = Galician
-fi = Finnish
-fr = French
-hu = Hungarian
-it = Italian
-jp = Japanese
-lt = Lithuanian
-nl = Dutch
-no = 否
-pl = Polish
-pt = Portuguese
-pt_br = Portuguese (Br)
-ro = Romanian
-rs = Serbian
-ru = Russian
-se = Swedish
-sk = Slovakian
-tr = Turkish
-ua = Ukrainian
+cz =
+da =
+de =
+en =
+es =
+es_gl =
+fi =
+fr =
+hu =
+it =
+jp =
+lt =
+nl =
+nor =
+pl =
+pt =
+pt_br =
+ro =
+rs =
+ru =
+se =
+sk =
+tr =
+ua =
 calendar = 日历
 dateformat = 日期格式
 timezone = 时区
@@ -325,6 +325,7 @@ icalexport = iCal
 import = 从Basecamp导入
 importsuccess = 成功导入
 inactive = 未激活
+no = 否
 objoff = 停止
 objon = 进行中
 on = 已创建
