--- a/language/cz/lng.conf
+++ b/language/cz/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Upravit seznam úkolů
 latetasks = Zpožděné úkoly
 mytasks = Mé úkoly
 newtasks = Nové úkoly
-notasklists = Nebyl nalezen žádný seznam úkolů.<br />Prosím <a href
+notasklists =
 notasks = Momentálně nečekají žádné úkoly.
 openprogress = Otevřít
 status = Stav
@@ -143,14 +143,14 @@ mailmethod = Metoda
 mailserver = Server
 mailusername = SMTP uživatelské jméno
 mailpass = SMTP heslo
-profileaddedsubject = Collabtive - Nový uživatelský profil
-profileaddedtext = Byl Vám vytvořen uživatelský profil.
+profileaddedsubject = Collabtive oznamení – Nový uživatelský profil
+profileaddedtext = Ahoj,<br /><br />byl Vám vytvořen uživatelský profil.<br />
 profilepass = Heslo
 profileusername = Uživatelské jméno
-projectassignedsubject = Collabtive – Oznamení: Projekt přidělen
-projectassignedtext = Ahoj,<br />byl Ti přidělen následující projekt:
-taskassignedsubject = Collabtive – Oznamení: Úkol přidělen
-taskassignedtext = Ahoj,<br />byl Ti přidělen následující úkol:
+projectassignedsubject = Collabtive oznamení – Projekt přidělen
+projectassignedtext = Ahoj,<br /><br />byl Ti přidělen následující projekt:<br />
+taskassignedsubject = Collabtive oznamení – Úkol přidělen
+taskassignedtext = Ahoj,<br /><br />byl Ti přidělen následující úkol:<br />
 addfile = Přidat soubor
 addfiles = Přidat soubory
 addfolder = Vytvořit složku
@@ -238,7 +238,7 @@ october = Říjen
 november = Listopad
 december = Prosinec
 accessdenied = Přístup odepřen
-confirmdel = Opravdu si přejete smazat tento objekt? Smazání již nebude možné vrátit zpět.
+confirmdel = Opravdu si přejete smazat tento objekt?\nSmazání již nebude možné vrátit zpět.
 error = Chyba
 goback = Prosím vraťte se zpět a opravte tuto chybu.
 nopermission = Nemáte potřebné oprávnění.
