--- a/language/da/lng.conf
+++ b/language/da/lng.conf
@@ -87,7 +87,7 @@ edittasklist = Rediger opgaveliste
 latetasks = Forsinkede opgaver
 mytasks = Mine opgaver
 newtasks = Nye opgaver
-notasklists = Der blev ikke fundet nogen opgaveliste.<br />Venligst <a href
+notasklists =
 notasks = Ingen afventende opgaver
 openprogress = Åbne
 status = Status
@@ -145,14 +145,14 @@ mailmethod = Metode
 mailserver = Server
 mailusername = SMTP brugernavn
 mailpass = SMTP kodeord
-profileaddedsubject = Collabtive - Din nye profil
-profileaddedtext = En ny brugerprofil er blevet oprettet for dig.
+profileaddedsubject =
+profileaddedtext = Hej,<br /><br />en ny brugerprofil er blevet oprettet for dig.<br />
 profilepass = Kodeord
 profileusername = Brugernavn
-projectassignedsubject = Projekt oplysning: Projekt tildelt
-projectassignedtext = Hej,<br />en ny projekt er blevet tildelt til dig:
-taskassignedsubject = Projekt oplysning: Opgave tildelt
-taskassignedtext = Hej,<br />en ny opgave er blevet tildelt til dig:
+projectassignedsubject =
+projectassignedtext = Hej,<br /><br />en ny projekt er blevet tildelt til dig:<br />
+taskassignedsubject =
+taskassignedtext = Hej,<br /><br />en ny opgave er blevet tildelt til dig:<br />
 addfile = Tilføj fil
 addfiles = Tilføj filer
 addfolder = Tilføj mappe
@@ -209,7 +209,7 @@ it = Italiensk
 jp = Japansk
 lt = Litauisk
 nl = Hollandsk
-nor = Nej
+nor =
 pl = Polsk
 pt = Portugisisk
 pt_br = Portugisisk (brasiliensk)
@@ -333,7 +333,7 @@ icalexport = iCal
 import = Importér fra Basecamp
 importsuccess = Importen blev gennemført
 inactive = Inaktiv
-notify = Informer
+no = Nej
 objoff = Inaktiv
 objon = Aktiv
 on = Oprettet
