--- a/language/de/lng.conf
+++ b/language/de/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Aufgabenliste bearbeiten
 latetasks = Verspätete Aufgaben
 mytasks = Meine Aufgaben
 newtasks = Aktuelle Aufgaben
-notasklists = Keine Aufgabenliste gefunden.<br /> Bitte zuerst eine Taskliste erzeugen.
+notasklists = Keine Aufgabenliste gefunden.<br />Bitte zuerst eine Taskliste erstellen.
 notasks = Zur Zeit stehen keine Aufgaben an.
 openprogress = Offen
 status = Status
@@ -143,13 +143,13 @@ mailmethod = Methode
 mailserver = Server
 mailusername = SMTP-User
 mailpass = SMTP-Passwort
-profileaddedsubject = Collabtive - Benutzerprofil erstellt
-profileaddedtext = Es wurde ein neues Collabtive Benutzerprofil für sie erstellt.<br />
+profileaddedsubject = Collabtive Benachrichtigung – Benutzerprofil erstellt
+profileaddedtext = Hallo,<br /><br />Es wurde ein neues Collabtive Benutzerprofil für sie erstellt.<br />
 profilepass = Passwort
 profileusername = Benutzername
-projectassignedsubject = Collabtive Benachrichtigung: Projekt zugewiesen
+projectassignedsubject = Collabtive Benachrichtigung – Projekt zugewiesen
 projectassignedtext = Hallo,<br /><br />sie wurden folgendem Projekt zugewiesen:<br />
-taskassignedsubject = Collabtive Benachrichtigung: Aufgabe zugewiesen
+taskassignedsubject = Collabtive Benachrichtigung – Aufgabe zugewiesen
 taskassignedtext = Hallo,<br /><br />folgende Aufgabe wurde ihnen zugewiesen:<br />
 addfile = Datei hinzufügen
 addfiles = Dateien hinzufügen
@@ -163,6 +163,8 @@ editfile = Datei bearbeiten
 editfolder = Ordner bearbeiten
 file = Datei
 files = Dateien
+filecreatedsubject = Collabtive Benachrichtigung – Datei erstellt
+filecreatedtext = Hallo,<br /><br />in einem ihrer Projekte wurde eine neue Datei erstellt.<br />
 filewasadded = Datei wurde erstellt
 filewasdeleted = Datei wurde gelöscht
 filewasedited = Datei wurde bearbeitet
@@ -192,12 +194,12 @@ cn = Chinesisch
 cz = Tschechisch
 da = Dänisch
 de = Deutsch
+el = Griechisch
 en = Englisch
 es = Spanisch
 es_gl = Galizisch
 fi = Finnisch
 fr = Französisch
-gr = Griechisch
 hu = Ungarisch
 it = Italienisch
 jp = Japanisch
@@ -327,6 +329,7 @@ import = Basecamp-Import
 importsuccess = Import erfolgreich
 inactive = Inaktiv
 no = Nein
+notify = Benachrichtigen
 objoff = Aus
 objon = An
 on = Erstellt am
