--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -1,7 +1,3 @@
-[strings]
-{* English translation by Eva Kranz (eva@o-dyn.de) - http://www.collabtive.o-dyn.de *}
-{* User / Company *}
-
 address = Address
 adduser = Add user
 admin = Admin
@@ -164,13 +160,13 @@ mailmethod = Method
 mailserver = Server
 mailusername = SMTP username
 mailpass = SMTP password
-profileaddedsubject = Collabtive - Your new user profile
-profileaddedtext = A new user profile has been created for you.
+profileaddedsubject = Collabtive notification – User profile created
+profileaddedtext = Hello,<br /><br />a new user profile has been created for you:<br />
 profilepass = Password
 profileusername = Username
-projectassignedsubject = Collabtive notification: Project assigned
+projectassignedsubject = Collabtive notification – Project assigned
 projectassignedtext = Hello,<br /><br />a new project has been assigned to you:<br />
-taskassignedsubject = Collabtive notification: Task assigned
+taskassignedsubject = Collabtive notification – Task assigned
 taskassignedtext = Hello,<br /><br />a new task has been assigned to you:<br />
 
 {* Files *}
@@ -186,7 +182,7 @@ directory = Directory
 editfile = Edit file
 editfolder = Edit folder
 file = File
-filecreatedsubject = Collabtive notification: File added
+filecreatedsubject = Collabtive notification – File added
 filecreatedtext = Hello,<br /><br />a file has been added to one of your projects.<br />
 files = Files
 filewasadded = File was added
@@ -226,12 +222,12 @@ cn = Chinese
 cz = Czech
 da = Danish
 de = German
+el = Greek
 en = English
 es = Spanish
 es_gl = Galician
 fi = Finnish
 fr = French
-gr = Greek
 hu = Hungarian
 it = Italian
 jp = Japanese
