--- a/language/es/lng.conf
+++ b/language/es/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Editar la lista de tareas
 latetasks = Tareas retrasadas
 mytasks = Mis tareas
 newtasks = Tareas nuevas
-notasklists = Ninguna lista de la tareas fue encontrada.<br />Por favor <a href
+notasklists =
 notasks = No hay tareas pendientes
 openprogress = Abierto
 status = Estado
@@ -143,14 +143,14 @@ mailmethod = Método
 mailserver = Servidor
 mailusername = Nombre de usuario SMTP
 mailpass = Contraseña SMTP
-profileaddedsubject = Collabtive - Perfil de usuario añadido
-profileaddedtext = Su nuevo perfil de usuario:<br />
+profileaddedsubject = Notificación de Collabtive – Perfil de usuario añadido
+profileaddedtext =
 profilepass = Password
 profileusername = Nombre de usuario
-projectassignedsubject = Notificación de Collabtive - Proyecto asignado
-projectassignedtext = Este es un mensaje automatizado de Collabtive.<br />Se le ha asignado el siguiente proyecto:
-taskassignedsubject = Notificación de Collabtive - Tarea asignada
-taskassignedtext = Este es un mensaje automatizado de Collabtive.<br />Se le ha asignado la siguiente tarea:
+projectassignedsubject = Notificación de Collabtive – Proyecto asignado
+projectassignedtext =
+taskassignedsubject = Notificación de Collabtive – Tarea asignada
+taskassignedtext =
 addfile = Añadir archivo
 addfiles = Añadir archivos
 addfolder = Añadir directorio
@@ -202,7 +202,7 @@ it = Italiano
 jp = Japonés
 lt = Lituano
 nl = Neerlandés
-no = No
+nor =
 pl = Polaco
 pt = Portugués
 pt_br = Portugués (Brasil)
@@ -238,7 +238,7 @@ october = Octubre
 november = Noviembre
 december = Diciembre
 accessdenied = Acceso denegado
-confirmdel = ¿Está seguro de que desea borrar este objeto? Una vez eliminado no se puede deshacer.
+confirmdel = ¿Está seguro de que desea borrar este objeto?\nUna vez eliminado no se puede deshacer.
 error = Error
 goback = Por favor regrese y corrija el error.
 nopermission = Permiso insuficiente
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Importar proyectos de Basecamp
 importsuccess = Archivo importado correctamente
 inactive = Inactivo
+no = No
 objoff = Desactivado
 objon = Activado
 on = Creado
