--- a/language/es_gl/lng.conf
+++ b/language/es_gl/lng.conf
@@ -202,7 +202,7 @@ it = Italiano
 jp = Xaponés
 lt = Lituano
 nl = Neerlandés
-no = 
+nor = 
 pl = Polaco
 pt = Portugués
 pt_br = Portugués (Br)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = 
 importsuccess = 
 inactive = Inactivo
+no =
 objoff = 
 objon = 
 on = O día
