--- a/language/fi/lng.conf
+++ b/language/fi/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Muokkaa tehtävälistaa
 latetasks = Myöhässäolevat tehtävät
 mytasks = Omat tehtävät
 newtasks = Uudet tehtävät
-notasklists = Tehtävälistoja ei löytynyt.<br /><a href
+notasklists =
 notasks = Ei avoimia tehtäviä
 openprogress = Avoin
 status = Tila
@@ -143,14 +143,14 @@ mailmethod = Lähetystapa
 mailserver = Palvelin
 mailusername = SMTP käyttäjätunnus
 mailpass = SMTP salasana
-profileaddedsubject = Collabtive - Uusi käyttäjäprofiilisi
-profileaddedtext = Sinulle on luotu uusi käyttäjäprofiili
+profileaddedsubject = Collabtive ilmoitus – Uusi käyttäjäprofiilisi
+profileaddedtext = Hei,<br /><br />sinulle on luotu uusi käyttäjäprofiili.<br />
 profilepass = Salasana
 profileusername = Käyttäjätunnus
-projectassignedsubject = Collabtiven ilmoitus: Projekti nimitetty
-projectassignedtext = Sinut on nimetty uuteen projektiin:
-taskassignedsubject = Collabtiven ilmoitus: Tehtävä nimitetty
-taskassignedtext = Hei,<br />sinulle on nimetty uusi tehtävä:
+projectassignedsubject = Collabtiven ilmoitus – Projekti nimitetty
+projectassignedtext = Hei,<br /><br />sinut on nimetty uuteen projektiin:<br />
+taskassignedsubject = Collabtiven ilmoitus – Tehtävä nimitetty
+taskassignedtext = Hei,<br /><br />sinulle on nimetty uusi tehtävä:<br />
 addfile = Lisää tiedosto
 addfiles = Lisää tiedostot
 addfolder = Lisää kansio
@@ -202,7 +202,7 @@ it = italia
 jp = japani
 lt = liettua
 nl = hollanti
-no = Ei
+nor =
 pl = puola
 pt = portugali
 pt_br = portugali (Brasilia)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Tuo Basecamp:stä
 importsuccess = Tuonti onnistui
 inactive = Ei käytössä
+no = Ei
 objoff = Ei käytössä
 objon = Käytössä
 on = Luotu
