--- a/language/fr/lng.conf
+++ b/language/fr/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Modifier la liste de tâches
 latetasks = Tâches en retard
 mytasks = Mes tâches
 newtasks = Nouvelles tâches
-notasklists = Liste de tâche introuvable.<br />Veuillez <a href
+notasklists =
 notasks = Il n'y a pas de tâches pour le moment.
 openprogress = En cours
 status = Statut
@@ -143,14 +143,14 @@ mailmethod = Méthode d'envoi
 mailserver = Serveur
 mailusername = Nom d'utilisateur
 mailpass = Mot de passe
-profileaddedsubject = Collabtive - Votre nouveau profil utilisateur
-profileaddedtext = Un nouveau profile utilisateur a été créé pour vous.
+profileaddedsubject =
+profileaddedtext =
 profilepass = Mot de passe
 profileusername = Nom d'utilisateur
-projectassignedsubject = Objet projet assigné
-projectassignedtext = Texte projet assigné
-taskassignedsubject = Objet tâche assignée
-taskassignedtext = Texte tâche assignée
+projectassignedsubject =
+projectassignedtext =
+taskassignedsubject =
+taskassignedtext =
 addfile = Ajouter un fichier
 addfiles = Ajouter des fichiers
 addfolder = Ajouter un dossier
@@ -202,7 +202,7 @@ it = Italien
 jp = Japonais
 lt = Lituanien
 nl = Néerlandais
-no = Non
+nor =
 pl = Polonais
 pt = Portugais
 pt_br = Portugais (Brésil)
@@ -256,7 +256,7 @@ dbname = Nom
 dbpass = Mot de passe
 dbuser = Utilisateur
 insertdbaccessdata = Entrez vos données d'accès, s'il vous plaît.
-installcollabtive = Collabtive - Installation
+installcollabtive = Collabtive – Installation
 installerchecksconditions = L'assistant vérifie que les conditions d'installation sont remplies.
 installerconditions = Prérequis à l'installation
 installerlanguage = Langue de l'assistant d'installation
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Importer de Basecamp
 importsuccess = L'import s'est effectué correctement
 inactive = Inactif
+no = Non
 objoff = Actif
 objon = Inactif
 on = Le
