--- a/language/gr/lng.conf
+++ b/language/gr/lng.conf
@@ -147,9 +147,9 @@ profileaddedsubject =
 profileaddedtext =
 profilepass =
 profileusername =
-projectassignedsubject = Ειδοποίηση από Collabtive: Σας ανατέθηκε project
+projectassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε project
 projectassignedtext =
-taskassignedsubject = Ειδοποίηση από Collabtive: Σας ανατέθηκε task
+taskassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε task
 taskassignedtext = Γεια χαρά,<br /><br />σας ανατέθηκε ένα νέο task :<br />
 addfile = Προσθήκη αρχείου 
 addfiles = Προσθήκη αρχείων
