--- a/language/hu/lng.conf
+++ b/language/hu/lng.conf
@@ -24,7 +24,7 @@ lastlogin = Utoljára aktív
 locale = Hely
 login = Bejelentkezés
 loginbutton = Bejelentkezés
-loginerror = Hiba a bejelentkezéskor
+loginerror =
 logout = Kijelentkezés
 male = Férfi
 members = Felhasználók
@@ -85,7 +85,7 @@ edittasklist = Feladatlista szerkesztése
 latetasks = Lejárt feladatok
 mytasks = Saját feladatok
 newtasks = Új feladatok
-notasklists = Nincsenek feladlisták
+notasklists =
 notasks = Nincs befejezett feladat
 openprogress = Megnyit
 status = Állapot
@@ -143,14 +143,14 @@ mailmethod = Metódus
 mailserver = Szerver
 mailusername = SMTP felh.
 mailpass = SMTP Jelszó
-profileaddedsubject = Profil hozzáadása üzenet
-profileaddedtext = Profil hozzáadva üzenet
+profileaddedsubject =
+profileaddedtext =
 profilepass = Profil jelszó
 profileusername = Profil felhasználó
-projectassignedsubject = Collabtive emlékeztető: projekt kijelölve
-projectassignedtext = Üdv, egy új projekthez lettél kijelölve
-taskassignedsubject = Collabtive emlékeztető: feladat kijelölve
-taskassignedtext = Üdv, egy új feladathoz lettél kijelölve
+projectassignedsubject = Collabtive emlékeztető – projekt kijelölve
+projectassignedtext = Üdv,<br /><br />egy új projekthez lettél kijelölve:<br />
+taskassignedsubject = Collabtive emlékeztető – feladat kijelölve
+taskassignedtext = Üdv,<br /><br />egy új feladathoz lettél kijelölve:<br />
 addfile = File hozzáadása
 addfiles = Fileok hozzáadása
 addfolder = Mappa hozzáadása
@@ -185,34 +185,34 @@ search = Keresés
 searchfor = Keresés a
 searching = Keresés...
 searchitem = Item keresés
-ar = Arabic
-bg = Bulgarian
-ca = Catalan
-cn = Chinese
-cz = Czech
-da = Danish
-de = German
-en = English
-es = Spanish
-es_gl = Galician
-fi = Finnish
-fr = French
-hu = Magyar
-it = Italian
-jp = Japanese
-lt = Lithuanian
-nl = Dutch
-no = Nem
-pl = Polish
-pt = Portuguese
-pt_br = Portuguese (Brasil)
-ro = Romanian
-rs = Serbian
-ru = Russian
-se = Swedish
-sk = Slovak
-tr = Turkish
-ua = Ukrainan
+ar =
+bg =
+ca =
+cn =
+cz =
+da =
+de =
+en =
+es =
+es_gl =
+fi =
+fr =
+hu =
+it =
+jp =
+lt =
+nl =
+nor =
+pl =
+pt =
+pt_br =
+ro =
+rs =
+ru =
+se =
+sk =
+tr =
+ua =
 calendar = Naptár
 dateformat = Dátum formátum
 timezone = Időzóna
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Import from Basecamp
 importsuccess = Az importálás sikeresen megtörtént
 inactive = Inaktív
+no = Nem
 objoff = Inaktív
 objon = Aktív
 on = Létrehozva
