--- a/language/it/lng.conf
+++ b/language/it/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Modifica tasklist
 latetasks = Ultimi task
 mytasks = I miei task
 newtasks = Nuovi task
-notasklists = Non sono stati trovati tasklist.
+notasklists =
 notasks = Non ci sono task
 openprogress = Apri
 status = Stato
@@ -143,14 +143,14 @@ mailmethod = Metodo
 mailserver = Server
 mailusername = SMTP Username
 mailpass = SMTP Password
-profileaddedsubject = Notifica da Collabtive - User profile
-profileaddedtext = Un nuovo profilo utente è stato creato per te.
+profileaddedsubject = Notifica da Collabtive – Profilo utente creato
+profileaddedtext =
 profilepass = Password
 profileusername = Username
-projectassignedsubject = Notifica da Collabtive - Progetto assegnato
-projectassignedtext = Un nuovo progetto è stato assegnato a te:
-taskassignedsubject = Notifica da Collabtive - Task assegnata
-taskassignedtext = Una nuova task è stata assegnata a te:
+projectassignedsubject = Notifica da Collabtive – Progetto assegnato
+projectassignedtext =
+taskassignedsubject = Notifica da Collabtive – Task assegnata
+taskassignedtext =
 addfile = Aggiungi file
 addfiles = Aggiungi files
 addfolder = Aggiungi cartella
@@ -202,7 +202,7 @@ it = Italiano
 jp = Giapponese
 lt = Lituano
 nl = Olandese
-no = No
+nor =
 pl = Polacco
 pt = Portoghese
 pt_br = Portoghese (Brasile)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Importa
 importsuccess = Importazione riuscita
 inactive = Inattivo
+no = No
 objoff = Inattivo
 objon = Attivo
 on = Creato
