--- a/language/jp/lng.conf
+++ b/language/jp/lng.conf
@@ -85,7 +85,7 @@ edittasklist = タスクリスト編集
 latetasks = 遅延タスク
 mytasks = マイタスク
 newtasks = 新規タスク
-notasklists = タスクリストはありません
+notasklists =
 notasks = 未解決のタスクはありません
 openprogress = オープン
 status = 状態
@@ -147,10 +147,10 @@ profileaddedsubject =
 profileaddedtext = 
 profilepass = 
 profileusername = 
-projectassignedsubject = 返信が追加されました
-projectassignedtext = 返信が追加されました
-taskassignedsubject = 返信が追加されました
-taskassignedtext = 返信が追加されました
+projectassignedsubject =
+projectassignedtext =
+taskassignedsubject =
+taskassignedtext =
 addfile = ファイルを追加する
 addfiles = ファイルを追加する
 addfolder = フォルダーを追加する
@@ -186,32 +186,32 @@ searchfor = Search for
 searching = Searching...
 searchitem = Search item
 ar = 
-bg = Bulgarian
+bg =
 ca = 
-cn = Chinese
-cz = Czech
-da = Danish
-de = German
-en = English
-es = Spanish
-es_gl = Galician
+cn =
+cz =
+da =
+de =
+en =
+es =
+es_gl =
 fi = 
-fr = French
-hu = Hungarian
-it = Italian
+fr =
+hu =
+it =
 jp = 日本語
-lt = Lithuanian
-nl = Dutch
-no = No
-pl = Polish
-pt = Portuguese
-pt_br = Portuguese
-ro = Romanian
-rs = Serbian
-ru = Russian
-se = Swedish
+lt =
+nl =
+nor =
+pl =
+pt =
+pt_br =
+ro =
+rs =
+ru =
+se =
 sk = 
-tr = Turkish
+tr =
 ua = 
 calendar = カレンダー
 dateformat = 日付フォーマット
@@ -325,6 +325,7 @@ icalexport = iCal
 import = インポート
 importsuccess = インポート成功
 inactive = Inactive
+no = No
 objoff = Off
 objon = On
 on = 日時
