--- a/language/lt/lng.conf
+++ b/language/lt/lng.conf
@@ -194,7 +194,7 @@ da = Daniškai
 de = Vokiškai
 en = Angliškai
 es = Ispaniškai
-es_gl = Galician
+es_gl =
 fi = 
 fr = Prancūziškai
 hu = 
@@ -202,7 +202,7 @@ it = Itališkai
 jp = Japoniškai
 lt = Lietuviškai
 nl = 
-no = Ne
+nor =
 pl = Lenkiškai
 pt = 
 pt_br = Portugališkai
@@ -325,6 +325,7 @@ icalexport = iCal
 import = 
 importsuccess = 
 inactive = Neaktyvus
+no = Ne
 objoff = Neaktyvus
 objon = Aktyvus
 on = Sukurta
