--- a/language/nl/lng.conf
+++ b/language/nl/lng.conf
@@ -52,9 +52,6 @@ userwasedited = Gebruikersprofiel aangepast
 vcardexport = vCard
 welcomeback = Welkom terug
 zip = Postcode
-
-{* Project *}
-
 access = Toegang
 addproject = Project toevoegen
 assignto = Toekennen  
@@ -67,7 +64,6 @@ myprojects = Mijn projecten
 name = Naam
 noprojects = Geen projecten gevonden
 openprojects = Geopende projecten
-
 project = Project
 projects = Projecten
 projectadministration = Projectadministratie
@@ -79,9 +75,6 @@ projectwasedited = Project aangepast
 projectwasopened = Project geopend
 report = Rapport
 start = Start
-
-{* Task / Tasklist *}
-
 addtask = Taak toevoegen
 addtasklist = Taaklijst toevoegen
 assign = Toekennen
@@ -94,7 +87,7 @@ edittasklist = Taaklijst aanpassen
 latetasks = Datum overschreden
 mytasks = Mijn taken
 newtasks = Nieuwe taken
-notasklists = Geen taaklijst gevonden.<br /><a href = "javascript:blindtoggle('addlist');">Voeg een nieuwe taaklijst toe</a>.
+notasklists = Geen taaklijst gevonden.<br />Voeg een nieuwe taaklijst toe.
 notasks = Geen taken
 openprogress = Open
 status = Status
@@ -116,9 +109,6 @@ taskwasedited = Taak aangepast
 taskwasopened = Taak geopend
 text = Tekst
 todaytasks = Taken voor vandaag
-
-{* Milestone *}
-
 addmilestone = Mijlpaal toevoegen
 donemilestones = Mijlpaal afgehandeld
 due = Streefdatum
@@ -134,9 +124,6 @@ milestonewasedited = Mijlpaal aangepast
 milestonewasopened = Mijlpaal geopend
 newmilestones = Nieuwe mijlpalen
 todaystones = Mijlpalen voor vandaag
-
-{* Messages *}
-
 addmessage = Notitie toevoegen
 answer = Reactie
 editmessage = Notitie wijzigen
@@ -152,26 +139,20 @@ replywasadded = Reactie toegevoegd
 replywasdeleted = Reactie verwijderd
 replywasedited = Reactie aangepast
 title = Titel
-
-{* eMails *}
-
 mailfrommail = Email afzender
 mailfromname = Naam afzender
 mailmethod = Verzend methode
 mailserver = SMTP servernaam
 mailusername = SMTP gebruikersnaam
 mailpass = SMTP wachtwoord
-profileaddedsubject = Collabtive - Uw nieuwe gebruikersprofiel
-profileaddedtext = Een nieuw gebruikersprofiel is voor u aangemaakt
+profileaddedsubject = Collabtive notificatie – Uw nieuwe gebruikersprofiel
+profileaddedtext = Hallo,<br /><br />een nieuw gebruikersprofiel is voor u aangemaakt.<br />
 profilepass = Wachtwoord
 profileusername = Gebruikersnaam
-projectassignedsubject = Collabtive - Project toegewezen aan onderwerp
-projectassignedtext = Hallo,<br />een nieuw project is aan u toegewezen:
-taskassignedsubject = Collabtive - Onderwerp toegewezen aan taak
-taskassignedtext = Hallo,<br />een nieuwe taak is aan u toegewezen:
-
-{* Files *}
-
+projectassignedsubject = Collabtive notificatie – Project toegewezen aan onderwerp
+projectassignedtext = Hallo,<br /><br />een nieuw project is aan u toegewezen:<br />
+taskassignedsubject = Collabtive notificatie – Onderwerp toegewezen aan taak
+taskassignedtext = Hallo,<br /><br />een nieuwe taak is aan u toegewezen:<br />
 addfile = Bestand toevoegen
 addfiles = Bestanden toevoegen
 addfolder = Map toevoegen
@@ -183,8 +164,8 @@ directory = Map
 editfile = Bestand aanpassen
 editfolder = Map wijzigen
 file = Bestand
-filecreatedsubject = Collabtive notificatie: Bestand toegevoegd
-filecreatedtext = Hallo,<br />een bestand is aan een van uw projecten toegevoegd.
+filecreatedsubject = Collabtive notificatie – Bestand toegevoegd
+filecreatedtext = Hallo,<br /><br />een bestand is aan een van uw projecten toegevoegd.<br />
 files = Bestanden
 filewasadded = Bestand toegevoegd
 filewasdeleted = Bestand verwijderd
@@ -198,9 +179,6 @@ maxsize = Maximum grootte
 parent = Bovenliggende map
 rootdir = Hoofdmap
 visibility = Zichtbaar voor
-
-{* Search *}
-
 advancedsearch = Uitgebreid zoeken
 didyoumean = Bedoelt u
 gosearch = Zoek
@@ -213,9 +191,6 @@ search = Zoek
 searchfor = Zoeken naar
 searching = Zoeken...
 searchitem = Zoekterm
-
-{* Languages *}
-
 ar = Arabisch
 bg = Bulgaars
 ca = Catalaans
@@ -245,9 +220,6 @@ se = Zweeds
 sk = Slowaaks
 tr = Turks
 ua = Oekraïens
-
-{* Calendar *}
-
 calendar = Kalender
 dateformat = Formaat datum
 timezone = Tijdszone
@@ -272,11 +244,8 @@ september = September
 october = Oktober
 november = November
 december = December
-
-{* Errors *}
-
 accessdenied = Geen toegang
-confirmdel = Verwijderen kan niet ongedaangemaakt worden.\n Doorgaan?
+confirmdel = Verwijderen kan niet ongedaangemaakt worden.\nDoorgaan?
 error = Fout
 goback = Ga terug en corrigeer fout
 nopermission = Geen rechten
@@ -284,9 +253,6 @@ notyourproject = Project niet aan u gekoppeld
 wrongfield = Corrigeer \"%FIELDNAME%\"
 wrongfields = Corrigeer:\n\n
 wrongselect = Corrigeer \"%FIELDNAME%\"
-
-{* Installation *}
-
 createadmin = Admin aanmaken
 clickcontinue = Klik op "verder" om door te gaan
 continue = Verder
@@ -308,9 +274,6 @@ makedirwritable = Geef schrijfrechten aan map
 makefilewritable = Geef schrijfrechten aan bestand
 phpversion = PHP versie
 proceedtologin = Ga verder en log in
-
-{* Timetracker *}
-
 comment = Commentaar
 edittimetracker = Wijzig urenverantwoording
 endafterstart = Einddatum voor startdatum
@@ -327,9 +290,6 @@ totalhours = Totale tijd [uur]
 timetable = Urenverantwoording voor
 timetracker = Urenverantwoording
 timetrackeradded = Urenverantwoording toegevoegt
-
-{* Roles / Permissions *}
-
 add = Toevoegen
 addrole = Toevoegen
 delete = Verwijder
@@ -343,9 +303,6 @@ role = Rol
 roleadded = Rol werd toegevoegd
 roleedited = Tol werd gewijzigd
 roles = Rollen
-
-{* Miscellaneous *}
-
 active = Actief
 activity = Activiteit
 action = Actie
