--- a/language/no/lng.conf
+++ b/language/no/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Rediger oppgaveliste
 latetasks = Forsinkede oppgaver
 mytasks = Mine oppgaver
 newtasks = Nye oppgaver
-notasklists = Ingen oppgaveliste funnet.<br />Vennligst <a href
+notasklists =
 notasks = Ingen gjenstående oppgaver
 openprogress = Åpne
 status = Status
@@ -143,14 +143,14 @@ mailmethod = Metode
 mailserver = Server
 mailusername = SMTP brukernavn
 mailpass = SMTP passord
-profileaddedsubject = Collabtive - Din nye brukerprofil
-profileaddedtext = En ny brukerprofil ble laget til deg.
+profileaddedsubject = Collabtive varsel – Din nye brukerprofil
+profileaddedtext = Hallo,<br /><br />en ny brukerprofil ble laget til deg.<br />
 profilepass = Passord
 profileusername = Brukernavn
-projectassignedsubject = Collabtive varsel: Prosjekt tildelt
-projectassignedtext = Hallo,<br />et nytt prosjekt ble tildelt deg:
-taskassignedsubject = Collabtive varsel: Oppgave tildelt
-taskassignedtext = Hallo,<br />en ny oppgave ble tildelt deg:
+projectassignedsubject = Collabtive varsel – Prosjekt tildelt
+projectassignedtext = Hallo,<br /><br />et nytt prosjekt ble tildelt deg:<br />
+taskassignedsubject = Collabtive varsel – Oppgave tildelt
+taskassignedtext = Hallo,<br /><br />en ny oppgave ble tildelt deg:<br />
 addfile = Legg til fil
 addfiles = Legg til filer
 addfolder = Leg til mape
@@ -185,34 +185,34 @@ search = Søk
 searchfor = Søk etter
 searching = Søker...
 searchitem = Søk etter oppføring
-ar = Arabic
-bg = Bulgarian
-ca = Catalan
-cn = Chinese
-cz = Czech
-da = Danish
-de = German
-en = English
-es = Spanish
-es_gl = Galician
-fi = Finnish
-fr = French
-hu = Hungarian
-it = Italian
-jp = Japanese
-lt = Lithuanian
-nl = Dutch
-no = Nei
-pl = Polish
-pt = Portuguese
-pt_br = Portuguese (Brazilian)
-ro = Romanian
-rs = Serbian
-ru = Russian
-se = Swedish
-sk = Slovak
-tr = Turkish
-ua = Ukranian
+ar =
+bg =
+ca =
+cn =
+cz =
+da =
+de =
+en =
+es =
+es_gl =
+fi =
+fr =
+hu =
+it =
+jp =
+lt =
+nl =
+nor =
+pl =
+pt =
+pt_br =
+ro =
+rs =
+ru =
+se =
+sk =
+tr =
+ua =
 calendar = Kalender
 dateformat = Dato format
 timezone = Tidssone
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Importer fra Basecamp
 importsuccess = Importering fullført uten feil
 inactive = Inaktiv
+no = Nei
 objoff = Inaktiv
 objon = Aktiv
 on = Skapt
