--- a/language/pl/lng.conf
+++ b/language/pl/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Edytuj listę zadań
 latetasks = Spóźnione zadania
 mytasks = Moje zadania
 newtasks = Nowe zadania
-notasklists = Brak listy zadań.<br />Utwórz <a href
+notasklists =
 notasks = Nie masz oczekujących zadań
 openprogress = Otwórz
 status = Status
@@ -143,14 +143,14 @@ mailmethod = Metoda
 mailserver = Serwer
 mailusername = Użytkownik SMTP
 mailpass = Hasło SMTP
-profileaddedsubject = Collabtive - Nowy profil użytkownika
-profileaddedtext = Nowy profil użytkownika został utworzony
+profileaddedsubject = Powiadomienie Collabtive – Nowy profil użytkownika
+profileaddedtext = Witaj ,<br /><br />nowy profil użytkownika został utworzony
 profilepass = Hasło
 profileusername = Użytkownik
-projectassignedsubject = Powiadomienie Collabtive - przydzielono ci projekt
-projectassignedtext = Witaj ,\nmasz przydzielone nowe projekt:
-taskassignedsubject = Powiadomienie Collabtive - przydzielono ci zadanie
-taskassignedtext = Witaj ,\nmasz przydzielone nowe zadanie:
+projectassignedsubject = Powiadomienie Collabtive – przydzielono ci projekt
+projectassignedtext = Witaj ,<br /><br />masz przydzielone nowe projekt:<br />
+taskassignedsubject = Powiadomienie Collabtive – przydzielono ci zadanie
+taskassignedtext = Witaj ,<br /><br />masz przydzielone nowe zadanie:<br />
 addfile = Dodaj plik
 addfiles = Dodaj pliki
 addfolder = Dodaj folder
@@ -185,33 +185,33 @@ search = Szukaj
 searchfor = Szukaj w
 searching = Szukanie...
 searchitem = Search item
-ar = Arabian
-bg = Bulgarian
-ca = Catalan
-cn = Chinese
-cz = Czech
-da = Danish
-de = German
-en = English
-es = Spanish
-es_gl = Galician
+ar =
+bg =
+ca =
+cn =
+cz =
+da =
+de =
+en =
+es =
+es_gl =
 fi = Fiński
-fr = French
-hu = Hungarian
-it = Italian
-jp = Japanese
-lt = Lithuanian
-nl = Dutch
-no = Nie
+fr =
+hu =
+it =
+jp =
+lt =
+nl =
+nor =
 pl = Polski
-pt = Portuguese
-pt_br = Portuguese (Br)
-ro = Romanian
-rs = Serbian
-ru = Russian
-se = Swedish
-sk = Slovakian
-tr = Turkish
+pt =
+pt_br =
+ro =
+rs =
+ru =
+se =
+sk =
+tr =
 ua = Ukraiński
 calendar = Kalendarz
 dateformat = Format daty
@@ -238,7 +238,7 @@ october = Październik
 november = Listopad
 december = Grudzień
 accessdenied = Dostęp zabroniony
-confirmdel = Czy napewno usunąć ten element?
+confirmdel =
 error = Błąd
 goback = Proszę wrócić i poprawić błąd
 nopermission = Brak uprawnień
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Importuj z Basecamp
 importsuccess = Importowanie pomyślnie zakończone
 inactive = Nieaktywny
+no =
 objoff = Bezczynny
 objon = Aktywny
 on = Utworzony
