--- a/language/pt/lng.conf
+++ b/language/pt/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Editar checklist
 latetasks = Tarefas atrasadas
 mytasks = Minhas tarefas
 newtasks = Novas tarefas
-notasklists = Não há checklists
+notasklists =
 notasks = Nenhuma tarefa pendente
 openprogress = Aberto
 status = Status
@@ -143,14 +143,14 @@ mailmethod = Método
 mailserver = Servidor
 mailusername = Username
 mailpass = Password
-profileaddedsubject = Collabtive - Perfil de Utilizador adicionado
-profileaddedtext = Seu novo perfil:<br />
+profileaddedsubject =
+profileaddedtext =
 profilepass = Password
 profileusername = Nome de Utilizador
-projectassignedsubject = Assunto de novo projecto
-projectassignedtext = Texto de novo projecto
-taskassignedsubject = Assunto de nova tarefa
-taskassignedtext = Texto de nova tarefa
+projectassignedsubject =
+projectassignedtext =
+taskassignedsubject =
+taskassignedtext =
 addfile = Adicionar ficheiro
 addfiles = Adicionar ficheiros
 addfolder = Adicionar pasta
@@ -202,7 +202,7 @@ it = Italiano
 jp = Japonês
 lt = Lituano
 nl = Holandês
-no = Não
+nor =
 pl = Polonês
 pt = Português
 pt_br = Português (Brasil)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Importar
 importsuccess = Importação bem sucessida
 inactive = Inactivo
+no = Não
 objoff = Inactivo
 objon = Activo
 on = Criado
