--- a/language/pt_br/lng.conf
+++ b/language/pt_br/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Alterar etapa
 latetasks = Tarefas passadas
 mytasks = Minhas tarefas
 newtasks = Novas tarefas
-notasklists = Lista de Notas
+notasklists =
 notasks = Nenhuma tarefa pendente
 openprogress = Aberto
 status = Status
@@ -143,14 +143,14 @@ mailmethod = Metodo do E-mail
 mailserver = Servidor de E-mail
 mailusername = Usuário do E-mail
 mailpass = Senha E-mail
-profileaddedsubject = Collabtive - Perfil do usuário adicionado
-profileaddedtext = Seu novo perfil:<br />
+profileaddedsubject =
+profileaddedtext =
 profilepass = Senha
 profileusername = Nome
-projectassignedsubject = Collabtive - Assunto do projeto
-projectassignedtext = Notificação,<br /> umo novo projeto foi atribuído a você:
-taskassignedsubject = Collabtive - Assunto da tarefa
-taskassignedtext = Notificação,<br /> uma nova tarefa foi atribuída a você:
+projectassignedsubject =
+projectassignedtext =
+taskassignedsubject =
+taskassignedtext =
 addfile = Adicionar arquivo
 addfiles = Adicionar arquivos
 addfolder = Adicionar Pasta
@@ -202,7 +202,7 @@ it = Italiano
 jp = Japão
 lt = Lituânia
 nl = Holandês
-no = Não
+nor =
 pl = Polonês
 pt = Português
 pt_br = Português (Brasil)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Importar
 importsuccess = Importação com Sucesso
 inactive = Inativo
+no = Não
 objoff = Inativo
 objon = Ativo
 on = Criado
