--- a/language/ro/lng.conf
+++ b/language/ro/lng.conf
@@ -202,7 +202,7 @@ it =
 jp = 
 lt = 
 nl = 
-no = nu
+nor =
 pl = Polonez
 pt = 
 pt_br = 
@@ -325,6 +325,7 @@ icalexport = iCal
 import = 
 importsuccess = 
 inactive = Inactiv
+no = nu
 objoff = 
 objon = 
 on = la
