--- a/language/rs/lng.conf
+++ b/language/rs/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Izmeni listu zadataka
 latetasks = Zadaci sa kašnjenjem
 mytasks = Moji zadaci
 newtasks = Novi zadaci
-notasklists = Nemate listu zadataka.<br />Molimo <a href
+notasklists =
 notasks = Nema zadataka na čekanju
 openprogress = Preostalo
 status = Status
@@ -143,14 +143,14 @@ mailmethod = Mail metoda
 mailserver = Mail server
 mailusername = Mail korisničko ime
 mailpass = Mail sifra
-profileaddedsubject = Collabtive obaveštenje: Napravljen profil
-profileaddedtext = Zdravo, <br /> Upravo Vam je napravljen profil:
-profilepass = Lozinka profila:
-profileusername = Korisničko ime profila:
-projectassignedsubject = Collabtive obaveštenje: Dodeljen projekt
-projectassignedtext = Zdravo,<br />upravo vam je dodeljen novi projekt:
-taskassignedsubject = Collabtive obaveštenje: Dodeljen zadataka
-taskassignedtext = Zdravo,<br />upravo vam je dodeljen novi zadatak:
+profileaddedsubject = Collabtive obaveštenje – Napravljen profil
+profileaddedtext = Zdravo,<br /><br />upravo Vam je napravljen profil.<br />
+profilepass = Lozinka profila
+profileusername = Korisničko ime profila
+projectassignedsubject = Collabtive obaveštenje – Dodeljen projekt
+projectassignedtext = Zdravo,<br /><br />upravo vam je dodeljen novi projekt:<br />
+taskassignedsubject = Collabtive obaveštenje – Dodeljen zadataka
+taskassignedtext = Zdravo,<br /><br />upravo vam je dodeljen novi zadatak:<br />
 addfile = Dodaj fajl
 addfiles = Dodaj fajlove
 addfolder = Dodaj folder
@@ -202,7 +202,7 @@ it = Italijanski
 jp = Japanski
 lt = Litvanski
 nl = Holandski
-no = Ne
+nor =
 pl = Poljski
 pt = Portugalski
 pt_br = Portugalski (Br)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Uvoz iz Basecamp-a
 importsuccess = Uvoz uspešno završen
 inactive = neaktivan
+no = Ne
 objoff = Neaktivan
 objon = Aktivan
 on = Kreiran
