--- a/language/ru/lng.conf
+++ b/language/ru/lng.conf
@@ -24,7 +24,7 @@ lastlogin = Был здесь в последний раз
 locale = Язык
 login = Логин
 loginbutton = Войти
-loginerror = Ошибка!<br /> Проверьте имя пользователя или пароль.
+loginerror = Ошибка!<br />Проверьте имя пользователя или пароль.
 logout = Выход
 male = Мужской
 members = Участники проекта
@@ -85,7 +85,7 @@ edittasklist = Редактировать список задач
 latetasks = Просроченные задачи
 mytasks = Мои задачи
 newtasks = Актуальные задачи
-notasklists = Списков задач не найдено.<br />Пожалуйста <a href
+notasklists =
 notasks = В настоящее время задач нет
 openprogress = Открытый прогресс
 status = Статус
@@ -143,14 +143,14 @@ mailmethod = Метод отправки
 mailserver = Сервер
 mailusername = Пароль
 mailpass = Пароль
-profileaddedsubject = Collabtive - Ваш новый профиль
-profileaddedtext = Ваш новый профиль создан
+profileaddedsubject =
+profileaddedtext =
 profilepass = Пароль
 profileusername = Пользователь
-projectassignedsubject = Collabtive: Новый проект
-projectassignedtext = Вы назначены исполнителем проекта:
-taskassignedsubject = Collabtive: Новое задание
-taskassignedtext = Вы назначены исполнителем задачи:
+projectassignedsubject =
+projectassignedtext =
+taskassignedsubject =
+taskassignedtext =
 addfile = Добавить файл
 addfiles = Добавить файлы
 addfolder = Добавить папку
@@ -202,7 +202,7 @@ it = Итальянский
 jp = Японский
 lt = Литовский
 nl = Голландский
-no = нет
+nor =
 pl = Польский
 pt = Португальский
 pt_br = Португальский (Бразильский)
@@ -238,7 +238,7 @@ october = Октябрь
 november = Ноябрь
 december = Декабрь
 accessdenied = Доступ запрещен
-confirmdel = Подтвердите удаление
+confirmdel =
 error = Ошибка
 goback = Назад
 nopermission = Доступ запрещен
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Импорт
 importsuccess = Импорт завершен
 inactive = неактивный
+no = нет
 objoff = Неактивен
 objon = Активен
 on = составлен
