--- a/language/se/lng.conf
+++ b/language/se/lng.conf
@@ -1,7 +1,3 @@
-[strings]
-{* Swedish translation by gheeti, Joar and Sailor *}
-{* User / Company *}
-
 address = Adress
 adduser = Lägg till användare
 admin = Admin
@@ -55,9 +51,6 @@ userwasedited = Användare blev redigerad
 vcardexport = vCard
 welcomeback = Välkommen tillbaka
 zip = Postnummer
-
-{* Project *}
-
 access = Åtkommst
 addproject = Lägg till projekt
 assignto = Tilldela till
@@ -80,9 +73,6 @@ projectwasedited = Projekt blev redigerat
 projectwasopened = Projekt blev startat
 report = Rapport
 start = Start
-
-{* Uppgift / Uppgiftslista *}
-
 addtask = Lägg till uppgift
 addtasklist = Lägg till uppgiftslista
 assign = Tilldela
@@ -95,7 +85,7 @@ edittasklist = Redigera uppgiftslista
 latetasks = Försenade uppgifter
 mytasks = Mina uppgifter
 newtasks = Nya uppgifter
-notasklists = Inga uppgiftlistor hittade.<br /><a href = "javascript:blindtoggle('addlist');">Skapa en uppgiftslista</a>.
+notasklists = Inga uppgiftlistor hittade.<br />Skapa en uppgiftslista.
 notasks = Inga uppgifter avvaktande
 openprogress = Pågående
 status = Status
@@ -117,9 +107,6 @@ taskwasedited = Uppgift blev redigerad
 taskwasopened = Uppgift blev startad
 text = Text
 todaytasks = Dagens uppgifter
-
-{* Milstolpe *}
-
 addmilestone = Lägg till milstolpe
 donemilestones = Färdiga milstolpar
 due = Sluttid
@@ -135,9 +122,6 @@ milestonewasedited = Milstolpe blev redigerad
 milestonewasopened = Milstolpe blev startad
 newmilestones = Nya milstolpar
 todaystones = Dagens milstolpar
-
-{* Meddelanden *}
-
 addmessage = Lägg till meddelande
 answer = Svar
 editmessage = Redigera meddelande
@@ -153,25 +137,20 @@ replywasadded = Svar blev tillagt
 replywasdeleted = Svar blev raderat
 replywasedited = Svar blev redigerat
 title = Titel
-
-{* eMails *}
-
 mailfrommail = Avsändares e-post
 mailfromname =  Avsändares namn
 mailmethod = Metod
 mailserver = Server
 mailusername = SMTP-användarnamn
 mailpass = SMTP-lösenord
-profileaddedsubject = Collabtive - Din nya användarprofil
-profileaddedtext = En ny användarprofil ar skapats för dig.
+profileaddedsubject = Collabtive notification – Din nya användarprofil
+profileaddedtext = Hej,<br /><br />en ny användarprofil ar skapats för dig.<br />
 profilepass = Lösenord
 profileusername = Användarnamn
-projectassignedsubject = Collabtive notification: Projekt tilldelat
-projectassignedtext = Hej,<br />du har blivit tilldelad ett nytt projekt:
-taskassignedsubject = Collabtive notification: Uppgift tilldelad
-taskassignedtext = Hej,<br />du har blivit tilldelad en ny uppgift:
-{* Filer*}
-
+projectassignedsubject = Collabtive notification – Projekt tilldelat
+projectassignedtext = Hej,<br /><br />du har blivit tilldelad ett nytt projekt:<br />
+taskassignedsubject = Collabtive notification – Uppgift tilldelad
+taskassignedtext = Hej,<br /><br />du har blivit tilldelad en ny uppgift:<br />
 addfile = Lägg till fil
 addfiles = Lägg till filer
 addfolder = Lägg till mapp
@@ -194,9 +173,6 @@ folderwasedited = Mapp blev redigerad
 managefolders = Hantera mappar
 maxsize = Maximal storlek
 rootdir = Rotkatalog 
-
-{* Search *}
-
 advancedsearch = Avancerad sökning
 didyoumean = Menade du
 gosearch = Kör!
@@ -209,9 +185,6 @@ search = Sök
 searchfor = Sök efter
 searching = Söker...
 searchitem = Sökpost
-
-{* Languages *}
-
 ar = Arabiska
 bg = Bulgariska
 ca = Katalanska
@@ -229,6 +202,7 @@ it = Italienska
 jp = Japanska
 lt = Litauiska
 nl = Nederländska
+nor =
 pl = Polska
 pt = Portugisiska
 pt_br = Portugisiska (Brasilien)
@@ -239,9 +213,6 @@ se = Svenska
 sk = Slovakiska
 tr = Turkiska
 ua = Ukrainska
-
-{* Calendar *}
-
 calendar = Kalender
 dateformat = Datumformat
 timezone = Tidszon
@@ -266,9 +237,6 @@ september = September
 october = Oktober
 november = November
 december = December
-
-{* Errors *}
-
 accessdenied = Åtkomst nekad
 confirmdel = Säker på att radera detta?\nEn radering kan inte ångras.
 error = Fel
@@ -278,9 +246,6 @@ notyourproject = Du är inte tilldelad detta projekt.
 wrongfield = Ange ett giltigt värde för \"%FIELDNAME%\".
 wrongfields = Ange giltiga värden för:\n\n
 wrongselect = Välj ett giltigt värde i \"%FIELDNAME%\".
-
-{* Installation *}
-
 createadmin = Skapa den första användaren. Den här användaren kommer att vara administratör och kan inte raderas.
 clickcontinue = Klicka på "fortsätt" för att gå vidare.
 continue = Fortsätt
@@ -302,9 +267,6 @@ makedirwritable = Gör katalogen skrivbar.
 makefilewritable = Gör filen skrivbar.
 phpversion = Du behöver PHP lägst version 5.1 för att köra Collabtive.
 proceedtologin = Fortsätt till inloggningssidan.
-
-{* Tidtracker *}
-
 comment = Kommentarer
 edittimetracker = Redigera tidspårningsinlägg
 endafterstart = Sluttiden måste vara efter starttiden.
@@ -321,9 +283,6 @@ totalhours = Timmar totalt
 timetable = Tidtabell för
 timetracker = Tidspårning
 timetrackeradded = Tid blev tillagd
-
-{* Roles / Permissions *}
-
 add = Lägg till
 addrole = Lägg till roll
 delete = Radera
@@ -335,9 +294,6 @@ permissions = Rättighter
 permissionswereedited = Rättigheterna blev redigerade
 role = Roll
 roles = Roller
-
-{* Miscellaneous *}
-
 active = Aktiv
 activity = Aktivitet
 action = Åtgärd
