--- a/language/sk/lng.conf
+++ b/language/sk/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Upraviť zoznam úloh
 latetasks = Oneskorené úlohy
 mytasks = Moje úlohy
 newtasks = Nové úlohy
-notasklists = Žiadne zoznamy úloh.<br />Prosím <a href
+notasklists =
 notasks = Momentálne nečakajú žiadne úlohy.
 openprogress = Otvoriť
 status = Stav
@@ -143,14 +143,14 @@ mailmethod = Metóda
 mailserver = Server
 mailusername = SMTP užívateľ
 mailpass = SMTP heslo
-profileaddedsubject = Collabtive - Váš nový profil užívateľa
-profileaddedtext = Bol vytvorený nový profil užívateľa.
+profileaddedsubject = Collabtive Oznámenie – Váš nový profil užívateľa
+profileaddedtext = Ahoj,<br /><br />bol vytvorený nový profil užívateľa.<br />
 profilepass = Heslo
 profileusername = Užívateľské meno
-projectassignedsubject = Collabtive – Oznámenie: Projekt pridelená
-projectassignedtext = Ahoj,<br />bola Ti pridelená nasledujúca projekt:
-taskassignedsubject = Collabtive – Oznámenie: Úloha pridelená
-taskassignedtext = Ahoj,<br />bola Ti pridelená nasledujúca úloha:
+projectassignedsubject = Collabtive Oznámenie – Projekt pridelená
+projectassignedtext = Ahoj,<br /><br />bola Ti pridelená nasledujúca projekt:<br />
+taskassignedsubject = Collabtive Oznámenie – Úloha pridelená
+taskassignedtext = Ahoj,<br /><br />bola Ti pridelená nasledujúca úloha:<br />
 addfile = Pridať súbor
 addfiles = Pridať súbory
 addfolder = Vytvoriť zložku
@@ -202,7 +202,7 @@ it = Italština
 jp = Japonština
 lt = Litevština
 nl = Nizozemština
-no = Nie
+nor =
 pl = Polština
 pt = Portugalština
 pt_br = Portugalština (Brazílie)
@@ -238,7 +238,7 @@ october = Október
 november = November
 december = December
 accessdenied = Prístup odoprený
-confirmdel = Naozaj si želáte zmazať tento objekt? Akciu už nebude možné vrátiť späť.
+confirmdel = Naozaj si želáte zmazať tento objekt?\nAkciu už nebude možné vrátiť späť.
 error = Chyba
 goback = Prosím vráťťe sa späť a opravte túto chybu.
 nopermission = Nemáte potrebné oprávnenia.
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Importovať Basecamp
 importsuccess = Import úspešný
 inactive = Neaktivné
+no = Nie
 objoff = vypnuté
 objon = zapnuté
 on = Vytvorený/á
