--- a/language/tr/lng.conf
+++ b/language/tr/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Görev listesi düzenle
 latetasks = Geciken görevler
 mytasks = Görevlerim
 newtasks = Yeni görev
-notasklists = Görev listesi bulunamadı. <br />Lütfen <a href
+notasklists =
 notasks = Bekleyen görev yok
 openprogress = Açık
 status = Durum
@@ -143,14 +143,14 @@ mailmethod = Methot
 mailserver = Sunucu
 mailusername = SMTP kullanıcı adı
 mailpass = SMTP şifresi
-profileaddedsubject = Collabtive - Yeni kullanıcı profili
-profileaddedtext = Sizin için yeni bir kullanıcı profili oluşuruldu.
+profileaddedsubject = Collabtive hatırlatması – Yeni kullanıcı profili
+profileaddedtext = Merhaba,<br /><br />sizin için yeni bir kullanıcı profili oluşuruldu.<br />
 profilepass = Parola
 profileusername = Kullanıcı Adı
-projectassignedsubject = Collabtive hatırlatması - Proje atandı
-projectassignedtext = Merhaba,<br />bu yeni projede görevlendirildiniz:
-taskassignedsubject = Collabtive hatırlatması - Görev atandı
-taskassignedtext = Merhaba,<br />bu yeni iş için siz görevlendirildiniz:
+projectassignedsubject = Collabtive hatırlatması – Proje atandı
+projectassignedtext = Merhaba,<br /><br />bu yeni projede görevlendirildiniz:<br />
+taskassignedsubject = Collabtive hatırlatması – Görev atandı
+taskassignedtext = Merhaba,<br /><br />bu yeni iş için siz görevlendirildiniz:<br />
 addfile = Dosya ekle
 addfiles = Dosyaları ekle
 addfolder = Klasör ekle
@@ -202,7 +202,7 @@ it = İtalyanca
 jp = Japonca
 lt = İtalyanca
 nl = Litvanyaca
-no = Hayır
+nor =
 pl = Polonyoca
 pt = Portekizce
 pt_br = Portekizce (br)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Basecamp'tan içeri aktar
 importsuccess = İçeri aktarma başarıyla tamamandı
 inactive = Pasif
+no = Hayır
 objoff = Inactive
 objon = Active
 on = Oluştur
