--- a/language/ua/lng.conf
+++ b/language/ua/lng.conf
@@ -24,7 +24,7 @@ lastlogin = Останній вхід
 locale = Локаль
 login = Логін
 loginbutton = Вхід
-loginerror = Ви не зареєстровані.<br /> Перевірте, будь ласка, Ваші реєстраційні дані.
+loginerror = Ви не зареєстровані.<br />Перевірте, будь ласка, Ваші реєстраційні дані.
 logout = Вихід
 male = Чоловік
 members = Люди
@@ -85,7 +85,7 @@ edittasklist = Редагувати список завдань
 latetasks = Прострочені завдання
 mytasks = Мої завдання
 newtasks = Нові завдання
-notasklists = Списку завдань не виявлено.<br />Будь ласка, <a href
+notasklists =
 notasks = Немає завдань в очікуванні
 openprogress = Відкриті
 status = Статус
@@ -143,14 +143,14 @@ mailmethod = Метод
 mailserver = Сервер
 mailusername = SMTP користувач
 mailpass = SMTP пароль
-profileaddedsubject = Collabtive - Ваш новий профіль користувача
-profileaddedtext = Новий профіль користувача успішно створено
+profileaddedsubject = Collabtive Повідомлення – Ваш новий профіль користувача
+profileaddedtext = Привіт,<br /><br />Новий профіль користувача успішно створено.<br />
 profilepass = Пароль
 profileusername = Логін
-projectassignedsubject = Повідомлення: Проект призначено
-projectassignedtext = Текст
-taskassignedsubject = Повідомлення: Завдання призначено
-taskassignedtext = Привіт,<br />в системі  створено нове завдання для тебе. Переглянь, будь ласка:
+projectassignedsubject = Collabtive Повідомлення – Проект призначено
+projectassignedtext =
+taskassignedsubject = Collabtive Повідомлення – Завдання призначено
+taskassignedtext = Привіт,<br /><br />в системі створено нове завдання для тебе. Переглянь, будь ласка:<br />
 addfile = Додати файл
 addfiles = Додати файли
 addfolder = Додати папку
@@ -202,7 +202,7 @@ it = Італійська
 jp = Японська
 lt = Латвійська
 nl = Датська
-no = Ні
+nor =
 pl = Польська
 pt = Португальська
 pt_br = Португальська (Бразильська)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Імпортувати із Basecamp
 importsuccess = Імпорт успішно виконано
 inactive = Неактивне
+no = Hi
 objoff = Неактивне
 objon = Активне
 on = Створено
